# project_DRF

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
payments/: admin.py  models.py  services.py  urls.py
payments/api_views/: payment.py
payments/management/commands/: create_payment.py
payments/migrations/: 0001_initial.py
payments/serializers/: payment.py
studies/: admin.py  models.py  paginators.py  permissions.py  tasks.py  tests.py  urls.py  validators.py
studies/api_views/: course.py  lesson.py
studies/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_updated_at.py
studies/seriallizers/: course.py  lesson.py
subscription/: models.py  permissions.py  tests.py  urls.py
subscription/api_views/: subscription.py
subscription/migrations/: 0001_initial.py
subscription/serializers/: subscription.py
users/: admin.py  models.py  permissions.py  tasks.py  urls.py
users/api_views/: user.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/serializers/: user.py
